# contact-tracing-model

./: .gitignore  LICENSE  Networks.ipynb  PlotResults.ipynb  README.md  RandomExp.ipynb  SimulateCovid.ipynb  WorkingExamples.ipynb  env-for-jupyter.yml  env.yml  hpc_grid_run.pbs  hpc_run.pbs  network.html  pyproject.toml  run.py  setup.py  slurm_grid_run.sh  slurm_run.sh  socialevol_run.sh  untitled.txt  verify_env.pbs  verify_env.py
config/: agent_config.json  amodel_config.json  conda-env-jupyter.yml  conda-env.yml  conda_basic.yml  conda_jupyter_control.yml  conda_jupyter_draw.yml
ct_simulator/: __init__.py  mcmc.py  network.py  run_tracing.py  stats.py  utils.py
ct_simulator/tracing/: __init__.py  agent_factory.py  data_utils.py  exp_sampler.py  models.py  multirun_engine.py  network.py  simulation.py  stats.py  utils.py
data/run/: dumy  output-1  simresult1.txt
data/run/batch1/: simresult_id103_0.005_0.07_0.2222222222222222.json  simresult_id104_0.01_0.07_0.2222222222222222.json  simresult_id105_0.04_0.07_0.2222222222222222.json  simresult_id10_0.07_0.001_0.0.json  simresult_id110_0.01_0.1_0.2222222222222222.json  (+178 more)
data/verify/: counts0.txt
lib/: data_utils.py  exp_sampler.py  gridsearch.py  models.py  multirun_engine.py  network.py  simulation.py  stats.py  utils.py
notebooks/: MCMC-COVID.ipynb  Network.ipynb  NetworkAndUtils.ipynb  PlotResults.ipynb  RandomExp.ipynb  VisualizeGraph.ipynb  WorkingExamples.ipynb
scripts/: paramgrid.py
scripts/simulate/: hpc_grid_run.pbs  hpc_run.pbs  slurm_run.sh  slurm_run_grid.sh  socialevol_run.sh  win_run.bat
scripts/simulate_agent/: slurm_run_grid_agent.sh  win_run_agent.bat
verify_hpc/: verify_env.py
(+193 files in other folders)
